--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -269,6 +269,9 @@
 <script src="app/entities/projects/projects-update.controller.js"></script>
 <script src="app/entities/projects/projects-multiple.controller.js"></script>
 <script src="app/entities/projects/multiple-execs.controller.js"></script>
+<script src="app/entities/projects/update-tags.controller.js"></script>
+<script src="app/entities/projects/update-privileges.controller.js"></script>
+<script src="app/entities/projects/update-albums.controller.js"></script>
 
 
 <script src="app/entities/contacts/contacts-update.controller.js"></script>
