--- a/src/main/webapp/app/account/register/register.html
+++ b/src/main/webapp/app/account/register/register.html
@@ -28,8 +28,14 @@
 
                 <div class="form-group">
                     <label class="control-label" for="login" translate="global.form.username">Username</label>
+
+
                     <input type="text" class="form-control" id="login" name="login" placeholder="{{'global.form.username.placeholder' | translate}}"
                            ng-model="vm.registerAccount.login" ng-minlength=1 ng-maxlength=50 ng-pattern="/^[a-z0-9]*$/" required>
+
+
+
+
                     <div ng-show="form.login.$dirty && form.login.$invalid">
                         <p class="help-block"
                                ng-show="form.login.$error.required" translate="register.messages.validate.login.required">
@@ -52,7 +58,7 @@
                 <div class="form-group">
                     <label class="control-label" for="email" translate="global.form.email">E-mail</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="{{'global.form.email.placeholder' | translate}}"
-                           ng-model="vm.registerAccount.email" ng-minlength=5 ng-maxlength=100 required>
+                           ng-model="vm.registerAccount.email" ng-minlength=5 ng-maxlength=100 ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"  required>
                     <div ng-show="form.email.$dirty && form.email.$invalid">
                         <p class="help-block"
                                ng-show="form.email.$error.required" translate="global.messages.validate.email.required">
@@ -70,6 +76,8 @@
                                ng-show="form.email.$error.maxlength" translate="global.messages.validate.email.maxlength">
                             Your e-mail cannot be longer than 100 characters.
                         </p>
+
+
                     </div>
                 </div>
                 <div class="form-group">
