--- a/src/main/webapp/app/entities/work-order/work-order-add.html
+++ b/src/main/webapp/app/entities/work-order/work-order-add.html
@@ -1,3 +1,4 @@
+
 <!--
 <div class="col-xs-2 input-xs">
 <multiselect ng-model="selection" options="vm.shadow" show-select-all="true" show-unselect-all="true">
@@ -217,6 +218,8 @@
 
         <div id="processing">
             <h4 class="text-primary"><strong><u>Processing</u></strong></h4>
+
+
             <div class="row">
                 <label class="col-md-1 control-label small" for="textinput">Date Recieved</label>
                 <div class="col-sm-2">
@@ -229,6 +232,8 @@
                            class="form-control input-sm" ng-model="vm.workOrder.processingHDDid">
                 </div>
             </div>
+
+
             <div class="row">
                 <label class="col-md-1 control-label small" for="textinput">Date Shipped</label>
                 <div class="col-sm-2">
@@ -392,21 +397,41 @@
                 </div>
             </div>
         </div>-->
-        <div class="col-sm-2">
+
+
+        <div class="col-sm-3">
+
+<!--
             <select class="form-control input-sm" id="field_vm.adminRelationDTOs[3].admin_user"
                     name="assignedToUser"
                     ng-model="vm.workOrdersAdminRelations[0].admin_user"
-                    ng-options="user as user.fullName for user in vm.users track by user.id">
+                    ng-options="user as user.fullName for user in vm.users track by user.id" >
                 <option value=""></option>
-            </select>
+            </select>-->
 
+            <div class="dropdown" uib-dropdown auto-close="outsideClick" on-toggle="toggled(open)">
+                <a class="btn btn-primary btn-sm" uib-dropdown-toggle>Verified</a>
+                <ul class="dropdown-menu status-select" class="status-select" ng-if="$index == selectedFilterIndex" uib-dropdown-menu>
+                    <li ng-repeat="user in vm.users track by user.id">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-click="OnDropDownSelectionChanged(filter,DataValue)">
+                                {{user.fullName}}
+                            </label>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
+
+
         <label class="col-md-1 control-label small" for="textinput">Processed</label>
         <div class="col-sm-2">
             <select class="form-control input-sm" id="field_vm.adminRelationDTOs[4].admin_user"
                     name="assignedToUser"
                     ng-model="vm.workOrdersAdminRelations[1].admin_user"
-                    ng-options="user as user.fullName for user in vm.users track by user.id">
+                    ng-options="user as user.fullName for user in vm.users track by user.id"
+                    >
                 <option value=""></option>
             </select>
 
@@ -423,16 +448,29 @@
 
         </div>
     </div>
+    <br>
     <div class="row">
         <label class="col-md-1 control-label small" for="textinput">Print</label>
-        <div class="col-sm-2">
-            <select class="form-control input-sm" id="field_vm.adminRelationDTOs[6].admin_user"
+        <div class="col-sm-3">
+           <!-- <select class="form-control input-sm" id="field_vm.adminRelationDTOs[6].admin_user"
                     name="assignedToUser"
                     ng-model="vm.workOrdersAdminRelations[3].admin_user"
                     ng-options="user as user.fullName for user in vm.users track by user.id">
                 <option value=""></option>
-            </select>
-
+            </select>-->
+            <div class="dropdown" uib-dropdown auto-close="outsideClick" on-toggle="toggled(open)">
+                <a class="btn btn-primary btn-sm" uib-dropdown-toggle>Verified</a>
+                <ul class="dropdown-menu status-select" class="status-select" ng-if="$index == selectedFilterIndex" uib-dropdown-menu>
+                    <li ng-repeat="user in vm.users track by user.id">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-click="OnDropDownSelectionChanged(filter,DataValue)">
+                                {{user.fullName}}
+                            </label>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
