--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -367,6 +367,9 @@ Latest compiled and minified JavaScript
 
 	<script src="app/entities/projects/projects-template.controller.js"></script>
 	<script src="app/entities/projects/projects-update.controller.js"></script>
+	
+	<script src="app/entities/projects/projects-template-add.controller.js"></script>
+	
 	<script src="app/entities/projects/projects-multiple.controller.js"></script>
 	<script src="app/entities/projects/multiple-execs.controller.js"></script>
 	<script src="app/entities/projects/update-tags.controller.js"></script>
