--- a/src/main/webapp/app/entities/work-order/work-order-invoice.html
+++ b/src/main/webapp/app/entities/work-order/work-order-invoice.html
@@ -37,23 +37,23 @@
             <thead>
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
 
-                <th jh-sort-by="id" class="small">ID <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="requestDate" class="small">Project Name<span class="glyphicon glyphicon-sort"></span>
+                <th jh-sort-by="id" class="extra-small">ID <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="requestDate" class="extra-small">Project Name<span class="glyphicon glyphicon-sort"></span>
                 </th>
-                <th jh-sort-by="requestDescription" class="small">PO#<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="poRecord" class="small">Date <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="small">Type <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="small">PKO <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="durationOfService" class="small">Work Description<span
+                <th jh-sort-by="requestDescription" class="extra-small">PO#<span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="poRecord" class="extra-small">Date <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="invoiced" class="extra-small">Type <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="invoiced" class="extra-small">PKO <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="durationOfService" class="extra-small">Work Description<span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="type.textValue" class="small">Status<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="status.textValue" class="small">Time(Hours)<span
+                <th jh-sort-by="type.textValue" class="extra-small">Status<span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="status.textValue" class="extra-small">Time(Hours)<span
                     class="glyphicon glyphicon-sort"></span></th>
 
-                <th jh-sort-by="project.name" class="small">Assigned To <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="project.name" class="small">Audited <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="project.name" class="small">Audited By <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="project.name" class="small">Invoiced <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="project.name" class="extra-small">Assigned To <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="project.name" class="extra-small">Audited <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="project.name" class="extra-small">Audited By <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="project.name" class="extra-small">Invoiced <span class="glyphicon glyphicon-sort"></span></th>
                 <th></th>
             </tr>
             </thead>
@@ -67,22 +67,22 @@
                 }">
 
 
-                <td><a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
-                <td class="col-xs-2 small">{{workOrder.project_name}}</td>
-                <td class="col-xs-1 small">{{workOrder.po}}</td>
-                <td class="col-xs-1 small">{{workOrder.date}}</td>
-                <td class="small">{{workOrder.type}}</td>
-                <td class="small">{{workOrder.pko}}</td>
-                <td class="small">{{workOrder.workDesc}}</td>
-                <td class="col-xs-1 small">{{workOrder.status}}</td>
-                <td class="small">{{workOrder.time}}</td>
-                <td class="small">{{workOrder.assignedTo}}</td>
-                <td class="small">{{workOrder.audited}}</td>
-                <td class="small">{{workOrder.auditedBy}}</td>
-                <td class="small">{{workOrder.invoiced}}</td>
+                <td class="extra-small"><a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
+                <td class="col-xs-2 extra-small">{{workOrder.project_name}}</td>
+                <td class="col-xs-1 extra-small">{{workOrder.po}}</td>
+                <td class="col-xs-1 extra-small">{{workOrder.date}}</td>
+                <td class="extra-small">{{workOrder.type}}</td>
+                <td class="extra-small">{{workOrder.pko}}</td>
+                <td class="extra-small">{{workOrder.workDesc}}</td>
+                <td class="col-xs-1 extra-small">{{workOrder.status}}</td>
+                <td class="extra-small">{{workOrder.time}}</td>
+                <td class="extra-small">{{workOrder.assignedTo}}</td>
+                <td class="extra-small">{{workOrder.audited}}</td>
+                <td class="extra-small">{{workOrder.auditedBy}}</td>
+                <td class="extra-small">{{workOrder.invoiced}}</td>
 
 
-                <td class="text-right small">
+                <td class="text-right extra-small">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
                                 ui-sref="work-order-detail({id:workOrder.id})"
