--- a/src/main/webapp/app/entities/work-order/work-order-my-open.html
+++ b/src/main/webapp/app/entities/work-order/work-order-my-open.html
@@ -37,19 +37,19 @@
             <thead>
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
 
-                <th jh-sort-by="id" class="small">ID <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="requestDate" class="small">Project Name<span class="glyphicon glyphicon-sort"></span>
+                <th jh-sort-by="id" class="extra-small">ID <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="requestDate" class="extra-small">Project Name<span class="glyphicon glyphicon-sort"></span>
                 </th>
-                <th jh-sort-by="requestDescription" class="small">PO#<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="poRecord" class="small">Date <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="small">Type <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="durationOfService" class="small">Work Description<span
+                <th jh-sort-by="requestDescription" class="extra-small">PO#<span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="poRecord" class="extra-small">Date <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="invoiced" class="extra-small">Type <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="durationOfService" class="extra-small">Work Description<span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="type.textValue" class="small">Status<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="status.textValue" class="small">Time(Hours)<span
+                <th jh-sort-by="type.textValue" class="extra-small">Status<span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="status.textValue" class="extra-small">Time(Hours)<span
                     class="glyphicon glyphicon-sort"></span></th>
 
-                <th jh-sort-by="project.name" class="small">Assigned To <span
+                <th jh-sort-by="project.name" class="extra-small">Assigned To <span
                     class="glyphicon glyphicon-sort"></span></th>
                 <th></th>
             </tr>
@@ -64,35 +64,35 @@
                 }">
 
 
-                <td>
+                <td class="extra-small">
                     <a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a>
                 </td>
 
-                <td class="small">
+                <td class="extra-small">
                     <a ui-sref="projects-detail({id:workOrder.project.id})">{{workOrder.project.name}}</a>
                 </td>
 
 
-                <td class="small">{{workOrder.poRecord}}</td>
+                <td class="extra-small">{{workOrder.poRecord}}</td>
 
-                <td class="col-xs-1 small">{{workOrder.requestDate | date:'mediumDate'}}</td>
-                <td class="small">
+                <td class="col-xs-1 extra-small">{{workOrder.requestDate | date:'mediumDate'}}</td>
+                <td class="extra-small">
                     <a ui-sref="lookups-detail({id:workOrder.type.id})">{{workOrder.type.textValue}}</a>
                 </td>
 
-                <td class="small">{{workOrder.requestDescription}}</td>
+                <td class="extra-small">{{workOrder.requestDescription}}</td>
 
-                <td class="small">
+                <td class="extra-small">
                     <a ui-sref="lookups-detail({id:workOrder.status.id})">{{workOrder.status.textValue}}</a>
                 </td>
 
-                <td class="small">{{workOrder.durationOfService}}</td>
-                <td class="small">
+                <td class="extra-small">{{workOrder.durationOfService}}</td>
+                <td class="extra-small">
                     {{workOrder.assignedToUser.firstName}}
                 </td>
 
 
-                <td class="text-right small">
+                <td class="text-right extra-small">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
                                 ui-sref="work-order-detail({id:workOrder.id})"
