--- a/src/main/webapp/app/entities/work-order/work-order-open.html
+++ b/src/main/webapp/app/entities/work-order/work-order-open.html
@@ -37,19 +37,19 @@
             <thead>
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
 
-                <th jh-sort-by="id" class="small">ID <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="requestDate" class="small">Project Name<span class="glyphicon glyphicon-sort"></span>
+                <th jh-sort-by="id" class="extra-small">ID <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="requestDate" class="extra-small">Project Name<span class="glyphicon glyphicon-sort"></span>
                 </th>
-                <th jh-sort-by="requestDescription" class="small">PO#<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="poRecord" class="small">Date <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="small">Type <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="durationOfService" class="small">Work Description<span
+                <th jh-sort-by="requestDescription" class="extra-small">PO#<span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="poRecord" class="extra-small">Date <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="invoiced" class="extra-small">Type <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="durationOfService" class="extra-small">Work Description<span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="type.textValue" class="small">Status<span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="status.textValue" class="small">Time(Hours)<span
+                <th jh-sort-by="type.textValue" class="extra-small">Status<span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="status.textValue" class="extra-small">Time(Hours)<span
                     class="glyphicon glyphicon-sort"></span></th>
 
-                <th jh-sort-by="project.name" class="small">Assigned To <span
+                <th jh-sort-by="project.name" class="extra-small">Assigned To <span
                     class="glyphicon glyphicon-sort"></span></th>
                 <th></th>
             </tr>
@@ -64,18 +64,18 @@
                 }">
 
 
-                <td><a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
-                <td class="col-xs-2 small">{{workOrder.project_name}}</td>
-                <td class="col-xs-1 small">{{workOrder.po}}</td>
-                <td class="col-xs-1 small">{{workOrder.date}}</td>
-                <td class="small">{{workOrder.type}}</td>
-                <td class="small">{{workOrder.workDesc}}</td>
-                <td class="col-xs-1 small">{{workOrder.status}}</td>
-                <td class="small">{{workOrder.time}}</td>
-                <td class="small">{{workOrder.assignedTo}}</td>
+                <td class="extra-small"><a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
+                <td class="col-xs-2 extra-small">{{workOrder.project_name}}</td>
+                <td class="col-xs-1 extra-small">{{workOrder.po}}</td>
+                <td class="col-xs-1 extra-small">{{workOrder.date}}</td>
+                <td class="extra-small">{{workOrder.type}}</td>
+                <td class="extra-small">{{workOrder.workDesc}}</td>
+                <td class="col-xs-1 extra-small">{{workOrder.status}}</td>
+                <td class="extra-small">{{workOrder.time}}</td>
+                <td class="extra-small">{{workOrder.assignedTo}}</td>
 
 
-                <td class="text-right small">
+                <td class="text-right extra-small">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
                                 ui-sref="work-order-detail({id:workOrder.id})"
