--- a/src/main/webapp/app/entities/work-order/work-orders.html
+++ b/src/main/webapp/app/entities/work-order/work-orders.html
@@ -38,30 +38,30 @@
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
 
 
-                <th jh-sort-by="id" class="small"><span translate="global.field.id">ID</span> <span
+                <th jh-sort-by="id" class="extra-small"><span translate="global.field.id">ID</span> <span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="project.name" class="small"><span
+                <th jh-sort-by="project.name" class="extra-small"><span
                     translate="smartLpcApp.workOrder.project">project</span> <span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="poRecord" class="small"><span translate="smartLpcApp.workOrder.poRecord">PoRecord</span> <span
+                <th jh-sort-by="poRecord" class="extra-small"><span translate="smartLpcApp.workOrder.poRecord">PoRecord</span> <span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="requestDate" class="small"><span translate="smartLpcApp.workOrder.requestDate">RequestDate</span>
+                <th jh-sort-by="requestDate" class="extra-small"><span translate="smartLpcApp.workOrder.requestDate">RequestDate</span>
                     <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="type.textValue" class="small"><span
+                <th jh-sort-by="type.textValue" class="extra-small"><span
                     translate="smartLpcApp.workOrder.type">type</span> <span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="requestDescription" class="small"><span
+                <th jh-sort-by="requestDescription" class="extra-small"><span
                     translate="smartLpcApp.workOrder.requestDescription">RequestDescription</span>
                     <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="status.textValue" class="small"><span
+                <th jh-sort-by="status.textValue" class="extra-small"><span
                     translate="smartLpcApp.workOrder.status">status</span> <span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="durationOfService" class="small"><span
+                <th jh-sort-by="durationOfService" class="extra-small"><span
                     translate="smartLpcApp.workOrder.durationOfService">DurationOfService</span>
                     <span class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="invoiced" class="small"><span translate="smartLpcApp.workOrder.invoiced">Invoiced</span> <span
+                <th jh-sort-by="invoiced" class="extra-small"><span translate="smartLpcApp.workOrder.invoiced">Invoiced</span> <span
                     class="glyphicon glyphicon-sort"></span></th>
-                <th jh-sort-by="assignedToUser.firstName" class="small"><span
+                <th jh-sort-by="assignedToUser.firstName" class="extra-small"><span
                     translate="smartLpcApp.workOrder.assignedToUser">assignedToUser</span>
                     <span class="glyphicon glyphicon-sort"></span></th>
 
@@ -74,27 +74,27 @@
             <tr ng-repeat="workOrder in vm.workOrders track by workOrder.id"
                 ng-class="{verify: workOrder.status.id == 104, notstarted: workOrder.status.id == 103}">
 
-                <td class="small"><a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
-                <td class="small">
+                <td class="extra-small"><a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
+                <td class="extra-small">
                     <a ui-sref="projects-detail({id:workOrder.project.id})">{{workOrder.project.name}}</a>
                 </td>
-                <td class="small">{{workOrder.poRecord}}</td>
-                <td class="small">{{workOrder.requestDate | date:'mediumDate'}}</td>
-                <td class="small">
+                <td class="extra-small">{{workOrder.poRecord}}</td>
+                <td class="extra-small">{{workOrder.requestDate | date:'mediumDate'}}</td>
+                <td class="extra-small">
                     <a ui-sref="lookups-detail({id:workOrder.type.id})">{{workOrder.type.textValue}}</a>
                 </td>
-                <td class="small">{{workOrder.requestDescription}}</td>
-                <td class="small">
+                <td class="extra-small">{{workOrder.requestDescription}}</td>
+                <td class="extra-small">
                     <a ui-sref="lookups-detail({id:workOrder.status.id})">{{workOrder.status.textValue}}</a>
                 </td>
-                <td class="small">{{workOrder.durationOfService}}</td>
-                <td class="small">{{workOrder.invoiced}}</td>
-                <td class="small">
+                <td class="extra-small">{{workOrder.durationOfService}}</td>
+                <td class="extra-small">{{workOrder.invoiced}}</td>
+                <td class="extra-small">
                     {{workOrder.assignedToUser.fullName}}
                 </td>
 
 
-                <td class="text-right small">
+                <td class="text-right extra-small">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
                                 ui-sref="work-order-detail({id:workOrder.id})"
